--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -138,7 +138,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="My Appionment"
+                                android:text="All Appionments"
                                 android:textColor="@color/button"
                                 android:textStyle="bold" />
                         </LinearLayout>
