--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -146,9 +146,10 @@
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
                     android:gravity="center"
+                    android:hint="********"
                     android:inputType="textPassword"
-                    android:maxLength="12"
 
+                    android:maxLength="12"
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
