--- a/app/src/main/res/layout/activity_doctor_description.xml
+++ b/app/src/main/res/layout/activity_doctor_description.xml
@@ -96,7 +96,7 @@
         </androidx.cardview.widget.CardView>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_appoinment"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
