Doctor appoinment adapter

--- a/app/src/main/res/layout/doctor_appoinment_list_item.xml
+++ b/app/src/main/res/layout/doctor_appoinment_list_item.xml
@@ -97,7 +97,7 @@
                         android:textSize="14sp" />
 
                     <TextView
-                        android:id="@+id/doctor_appoinment_description"
+                        android:id="@+id/problem_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Description" />
