--- a/app/src/main/res/layout/activity_doctor_edit_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_edit_profile.xml
@@ -114,6 +114,29 @@
                     android:textSize="16dp" />
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Doctor Fee:"
+                    android:textColor="@color/button"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/etxt_specialist"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="35dp"
+                    android:background="@drawable/border"
+                    android:drawableRight="@drawable/ic_arrow_down"
+                    android:gravity="center"
+                    android:hint="Speciallist "
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:textColor="@color/textcolor"
+                    android:textSize="16dp" />
+                <TextView
                     android:id="@+id/textView23"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -123,21 +146,20 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etxtspeciallist"
+                    android:id="@+id/etxt_doctor_fee"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="22dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
-                    android:drawableRight="@drawable/ic_arrow_down"
-                    android:focusable="false"
                     android:gravity="center"
-                    android:hint="Speciallist "
-                    android:inputType="text"
+                    android:hint="Doctor Fee"
+                    android:inputType="number"
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
+
 
                 <TextView
                     android:layout_width="match_parent"
