--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -132,6 +132,27 @@
                     android:padding="16dp"
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:text="Doctor fee:"
+                    android:textColor="@color/button" />
+
+                <TextView
+                    android:id="@+id/txt_doctor_fee"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="35dp"
+                    android:background="@drawable/border"
+                    android:gravity="center"
+                    android:hint="Doctor Fee"
+                    android:inputType="number"
+                    android:padding="16dp"
+                    android:textColor="@color/textcolor"
+                    android:textSize="16dp" />
 
                 <TextView
                     android:layout_width="match_parent"
