--- a/app/src/main/res/layout/activity_doctor_description.xml
+++ b/app/src/main/res/layout/activity_doctor_description.xml
@@ -144,6 +144,7 @@
                             android:layout_marginTop="10dp"
                             android:gravity="right"
                             android:text="Payment Amount: TK."
+                            android:textColor="@android:color/holo_red_light"
                             android:textSize="18sp" />
 
                         <TextView
@@ -152,6 +153,7 @@
                             android:layout_marginTop="4dp"
                             android:gravity="right"
                             android:text="bKash-Trans ID:"
+                            android:textColor="@android:color/holo_red_light"
                             android:textSize="18sp" />
 
                         <TextView
@@ -161,6 +163,7 @@
                             android:gravity="right"
                             android:paddingTop="3dp"
                             android:text="From bKash Number:"
+                            android:textColor="@android:color/holo_red_light"
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -185,6 +188,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/doctor_bkash_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
@@ -192,20 +196,20 @@
                             android:textColor="@color/button"
                             android:textSize="18sp" />
 
-                        <EditText
+                        <TextView
                             android:id="@+id/payment_amount"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
 
                             android:layout_marginTop="5dp"
                             android:background="@drawable/border"
-                            android:hint="700"
+                            android:hint="0.00"
                             android:inputType="number"
                             android:padding="3dp"
-                            android:textColor="@color/textcolor"
+                            android:textColor="@android:color/holo_red_light"
                             android:textSize="16sp">
 
-                        </EditText>
+                        </TextView>
 
                         <EditText
                             android:id="@+id/bkash_trans_id"
@@ -221,14 +225,15 @@
                             android:textSize="16sp">
 
                         </EditText>
+
                         <EditText
-                            android:id="@+id/bkash_number"
+                            android:id="@+id/from_bkash_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
 
                             android:layout_marginTop="2dp"
                             android:background="@drawable/border"
-                            android:hint="01516000011"
+                            android:hint="01*********"
                             android:inputType="text"
                             android:padding="3dp"
                             android:textColor="@color/textcolor"
