--- a/app/src/main/res/layout/activity_hospital_info.xml
+++ b/app/src/main/res/layout/activity_hospital_info.xml
@@ -15,29 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/etxt_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Search here"
-                android:inputType="textPersonName" />
-
-            <Button
-                android:id="@+id/btnSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@color/button"
-                android:text="Search"
-                android:textColor="#fff"
-                android:textStyle="bold" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="203dp"
         android:layout_marginRight="203dp"
         android:layout_marginBottom="306dp" />
